fix: edit task, new task text area alignment & btn alignment

--- a/src/components/task/create-new/index.module.scss
+++ b/src/components/task/create-new/index.module.scss
@@ -14,7 +14,6 @@
     line-height: 1.172rem;
     outline: 3px solid $color-blue-tropical;
     padding: 0.25rem 0.5rem;
-    padding: 0;
     width: calc(100% - 1rem);
   }
 
